<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FedAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_base_title">BaseActivity</string>
    <string name="activity_event_entries_title">Events</string>
    <string name="activity_food_entries_title">Foods</string>
    <string name="sample_text">Sample Text</string>
    
    <string name="feeling">Feeling&#8230;</string>
    <string name="worst">Worst</string>
    <string name="best">Best</string>
    <string name="enter_date_time">Enter Date/Time</string>
    <string name="feeling_question_hint">How Are you feeling?</string>
</resources>
