<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:grid="http://schemas.android.com/apk/res-auto" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.client.android.fed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    app:columnCount="3"
    app:rowCount="7"
    android:background="@android:color/darker_gray"
    >
    <EditText 
        android:id="@+id/form_event_entry_description_text_view"
        android:inputType="text"
        android:hint="@string/feeling_question_hint"
        android:minLines="3"
        app:layout_row="0"
        app:layout_column="0"
        app:layout_rowSpan="3"
        app:layout_columnSpan="3"
        app:layout_gravity="fill"
        android:text="@string/sample_text"
        />
    <Button 
        android:id="@+id/form_event_entry_timestamp_button"
        app:layout_row="3"
        app:layout_column="0"
        app:layout_rowSpan="1"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        android:text="@string/enter_date_time"
        />
    <TextView
        android:id="@+id/form_event_entry_feeling_text_view"
        android:text="@string/feeling"
        android:background="@android:color/white"
        app:layout_row="4"
        app:layout_column="0" />

    <TextView
        android:id="@+id/form_event_entry_worst_text_view"
        app:layout_column="0"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1"
        android:background="@android:color/white"
        android:text="@string/worst" />

    <ProgressBar
        android:id="@+id/form_event_entry_feeling_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="fill_horizontal"
        app:layout_row="5"
        app:layout_rowSpan="1"
        android:background="@android:color/white"
        android:max="10"
        android:progress="50" />
    <TextView
        android:id="@+id/form_event_entry_best_text_view"
        android:layout_gravity="right"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="right"
        app:layout_row="5"
        app:layout_rowSpan="1"
        android:background="@android:color/white"
        android:text="@string/best" />
    

</android.support.v7.widget.GridLayout>
